src/objects/JIRA_Issue_prod__c.object
<CustomObject>
    <description>JIRA Issue object from JIRA; synced daily via IOD, filtered for SQA Issues only</description>
    <fields>
        <fullName>Created_Date_JIRA_Issue__c</fullName>
        <label>Created Date JIRA Issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IssueResolution__c</fullName>
        <label>IssueResolution</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_ID__c</fullName>
        <externalId>true</externalId>
        <label>Issue ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Issue_Summary__c</fullName>
        <label>Issue Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <label>Updated</label>
        <type>Date</type>
    </fields>
    <label>JIRA_Issue_prod</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Created_Date_JIRA_Issue__c</columns>
        <columns>Updated__c</columns>
        <columns>Issue_ID__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Issue_Summary__c</columns>
        <columns>IssueResolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Issue_ID__c</field>
            <operation>equals</operation>
            <value>2109639</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JI-{0000000}</displayFormat>
        <label>JIRA_Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JIRA_Issue_prods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>